# phys512

./: .gitignore  .gitmodules  README.rst  pyproject.toml
assignment1/: 1.py  2.py  3.py  4.py
assignment2/: 1.py  2.py  3.py
assignment3/: 1.py  2.py  3.py
assignment4/: 1.py
assignment5/: 1_lm.py  1_mcmc.py  1_mcmc_tauprior.py  assignment5.py  planck_chain.txt  planck_chain_tauprior.txt  planck_fit_cov_mat.txt  planck_fit_params.txt
assignment6/: 1.py  2.py  3.py  4.py  5.py  assignment6.py  mf_ligo_class.py
assignment7/: 1.py  2.py  3.py  rand_points_my.txt
assignment8/: 2.py
utils/: logger.py
